# new-video

./: .gitignore  AGENTS.md  ARCHITECTURE_CORRECTION_REPORT.md  ARCHITECTURE_DESIGN_v4_1.md  ARCHITECTURE_DESIGN_v4_FINAL.md  ARCHITECTURE_FIX_SUMMARY.md  ARCHITECTURE_GAP_ANALYSIS.md  ARCHITECTURE_PROPOSAL.md  ARCHITECTURE_V2_LangChain.md  ARCHITECTURE_VERIFICATION_REPORT.md  AUTO_REFRESH_SOLUTION.md  COMPREHENSIVE_VALIDATION_REPORT.md  CURRENT_CODE_AUDIT.md  DATA_EXTRACTION_REPORT.md  DEEP_RESEARCH_PROMPT.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_VALIDATION_REPORT.md  FLOW_DOCUMENTATION.md  FLOW_LOGIC_ANALYSIS_REPORT.md  Frontend-Design.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  Implementation_Requirements.md  LOOP_ISSUE_DIAGNOSIS_REPORT.md  MARKET_ANALYSIS_OPTIMIZATION_REPORT.md  P0_REFACTOR_COMPLETE_REPORT.md  Product-Spec-CHANGELOG.md  Product-Spec.md  REWRITE_PLAN.md  SKELETON_BUILDER_DESIGN_CONFIRMED.md  SKELETON_BUILDER_DESIGN_CONFIRMED_v1.md  SKELETON_BUILDER_IMPLEMENTATION_COMPLETE.md  STORY_PLANNER_OPTIMIZATION_PLAN.md  Skeleton_Builder_Reform_Plan.md  System-Architecture.md  TEST_REPORT.md  TIPTAP_OPTIMIZED_GUIDE.md  VERIFICATION_REPORT.md  WORKFLOW_IMPLEMENTATION.md  clear_checkpoints.py  (+57 more)
backend/: .env.template  ARCHITECTURE_REBUILD.md  README.md  REBUILD_PLAN.md  SERIALIZATION_FIX_SUMMARY.md  config.py  lifespan.py  main.py  prompts  pyproject.toml  test_checkpointer.py  test_new_architecture.py  test_phase1.py  test_routing_validation.py  test_services_comprehensive.py  test_skeleton_e2e.py  test_skeleton_integration.py  test_skeleton_logic.py  test_story_planner_flow.py  test_theme_api.py  test_theme_library_integration.py  test_verify_logic.py  verify_theme_import.py
backend/agents/: __init__.py  image_generator.py  market_analyst.py  master_router.py  registry.py  script_adapter.py  skeleton_builder.py  story_planner.py  storyboard_director.py
backend/api/: __init__.py  assets.py  canvas.py  connections.py  deps.py  episodes.py  graph.py  models.py  projects.py  review.py  scenes.py  shots.py  skeleton_builder.py  skeleton_extraction.py  themes.py
backend/data/: search_cache.json
backend/graph/: main_graph.py  main_graph_factory.py  router.py
backend/schemas/: __init__.py  agent_state.py  canvas.py  common.py  episode.py  job.py  message_types.py  model_config.py  node.py  project.py  responses.py  scene.py  shot.py
backend/services/: __init__.py  cache.py  chat_init_service.py  circuit_breaker.py  database.py  market_analysis.py  model_router.py  plan_deduplication.py  prompt_service.py  review_service.py  storage.py  (+4 more)
(+263 files in other folders)
