[project]
name = "ai-video-engine"
version = "1.0.0"
description = "AI 全流程短剧/漫剧文案生成引擎 - 后端服务"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "AI Video Team", email = "team@example.com"}
]

dependencies = [
    # ===== Core Framework =====
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "websockets>=13.0",
    
    # ===== LangChain & LangGraph =====
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-anthropic>=0.2.0",
    "langgraph-checkpoint>=2.0.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    
    # ===== Database & Storage =====
    "supabase>=2.10.0",
    "asyncpg>=0.30.0",
    "psycopg[binary,pool]>=3.2.0",
    "sqlalchemy>=2.0.0",
    
    # ===== Vector Store (RAG) =====
    "pgvector>=0.3.0",
    
    # ===== Redis & Celery =====
    "redis>=5.0.0",
    "celery[redis]>=5.4.0",
    "flower>=2.0.0",
    
    # ===== AI/ML Tools =====
    "openai>=1.50.0",
    "google-generativeai>=0.8.0",
    "anthropic>=0.37.0",
    "tiktoken>=0.8.0",
    
    # ===== Search & Browser Tools =====
    "duckduckgo-search>=6.0.0",
    "ddgs>=9.0.0",                # DuckDuckGo search backend
    "yt-dlp>=2024.8.0",           # Video search/download
    "playwright>=1.40.0",         # Browser automation
    
    # ===== Utilities =====
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "cachetools>=5.5.0",
    "orjson>=3.10.0",
    
    # ===== Crypto & Security =====
    "cryptography>=43.0.0",
    "python-jose[cryptography]>=3.3.0",
    
    # ===== Dev & Testing =====
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.hatch.build.targets.sdist]
include = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
